force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Definition__c/FD_Definition__c.object-meta.xml
<CustomObject>
    <label>Definition</label>
    <nameField>
        <displayFormat>#FD{YY}SF{MM}-{0}</displayFormat>
        <label>Definition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>