force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Definition__c/fields/FD_Activate__c.field-meta.xml
<CustomField>
    <fullName>FD_Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate</label>
    <type>Checkbox</type>
</CustomField>