force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Definition__c/fields/FD_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>FD_Updated_By__c</fullName>
    <formula>LastModifiedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated By</label>
    <type>Text</type>
</CustomField>