force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Definition__c/fields/FD_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>FD_Updated_On__c</fullName>
    <formula>LastModifiedDate</formula>
    <label>Updated On</label>
    <type>DateTime</type>
</CustomField>