force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Definition__c/fields/FD_Version__c.field-meta.xml
<CustomField>
    <fullName>FD_Version__c</fullName>
    <label>Version</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>