force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Definition__c/fields/FD_WF_Name__c.field-meta.xml
<CustomField>
    <fullName>FD_WF_Name__c</fullName>
    <formula>IF(FD_Saved__c==TRUE,
FD_Workflow__r.Name + &quot; &quot; + &quot;[&quot; + TEXT(FD_Version__c) + &quot;] (Read-Only)&quot;,
FD_Workflow__r.Name + &quot; &quot; + &quot;[&quot; + TEXT(FD_Version__c) + &quot;]&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WF Name</label>
    <type>Text</type>
</CustomField>