force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Definition__c/fields/FD_Workflow__c.field-meta.xml
<CustomField>
    <fullName>FD_Workflow__c</fullName>
    <label>Workflow</label>
    <referenceTo>FD_Workflow__c</referenceTo>
    <relationshipLabel>Definitions</relationshipLabel>
    <relationshipName>Definitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>