force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FD_WF_Name__c</columns>
    <columns>FD_Workflow__c</columns>
    <columns>FD_Version__c</columns>
    <columns>FD_Activate__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>